--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,30 @@
+:root
+{
+    /* 
+    --primary-color: #2f2f41;
+    --secondary-color: #be5501;
+    */
+    --primary-color: #1F1F29;
+    --secondary-color: #FE8E39;
+}
+
 body
 {
-    background-color: #2f2f41;
+    background-color: var(--primary-color);
     color: white;
     font-size: 1.2em;
 }
 
 .card{
     margin-bottom: 2rem;
-    border-color: #be5501;
-    background-color: #2f2f41;
+    border-color: var(--secondary-color);
+    background-color: var(--primary-color);
     color: white;
 }
 
 h1, h2, h3, h4, h5, h6
 {
-    color: #be5501;
+    color: var(--secondary-color);
 }
 
 footer{
@@ -27,11 +37,11 @@ form{
 }
 
 .btn-outline-hexcale{
-    color:#be5501;
-    border-color: #be5501;
+    color:var(--secondary-color);
+    border-color: var(--secondary-color);
 }
 
 .btn-outline-hexcale:hover{
-    background-color: #be5501;
+    background-color: var(--secondary-color);
     color: white;
 }
